--- a/Assesment 2.html
+++ b/Assesment 2.html
@@ -5,9 +5,17 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-
 </head>
 <body>
+    <form id="addHolidayForm">
+        <label for="holidayName">Holiday Name:</label>
+        <input type="text" id="holidayName" required>
+        <span id="holidayNameError" style="color: red;"></span>
+        <label for="holidayDate">Holiday Date:</label>
+        <input type="date" id="holidayDate" required>
+        <span id="holidayDateError" style="color: red;"></span>
+        <button type="submit">Add Holiday</button>
+    </form>
 
     <table id="data-table" class="display" style="width:100%">
         <thead>
